# ATC

./: .gitmodules
ATC/API C, CPP/: ATC.c  ATC.exp  ATC.h  ATC.lib  ATC.sln  ATC.vcxproj  ATC.vcxproj.filters  cpp.hint  main.c
ATC/API_C_CPP/: ATC.c  ATC.h  CMakeLists.txt
ATC/API_C_CPP/include/: ATC.h
ATC/API_C_CPP/src/: ATC.c  ATCData.h  ATCDataInput.c  ATCDataInput.h  ATCErrors.c  ATCErrors.h  ATCInternalFunctions.c  ATCInternalFunctions.h  ATCStartup.c  ATCStartup.h  RunATC.c  RunATC.h
ATC/JSWrapper/: ATC.js  ATC.wasm  CompileToJS.bat  JSWarpper.js  package-lock.json
ATC/PythonWrapper/: PythonWrapper.py
ATC_Dator/: CMakeLists.txt  build.sh
ATC_Dator/src/: main.cpp
ATC_Panel/C++/DebugPanel/: readme.md
ATC_Panel/C++/ExtendedDebugPanel/: CMakeLists.txt  build.sh  readme.md
ATC_Panel/C++/ExtendedDebugPanel/src/: main.cpp
ATC_Panel/C++/SimplePanel/: readme.md
Examples/C++/: CMakeLists.txt
Examples/C++/res/: ATC.gui
Examples/C++/src/: main.cpp
Examples/JS/: launch.json  test.js
Examples/Python/: PythonWrapper.py  main.py
UniversalFunctions/: readme.md  utils.hpp
UniversalFunctions/networking/sockets/: tcpSocket.cpp  tcpSocket.hpp
Utils/: build_all.sh  clear_build_all.sh  clear_rebuild_all.sh  readme.md
